fixed amount message

--- a/EmployeeLogin/WebContent/accounts.xhtml
+++ b/EmployeeLogin/WebContent/accounts.xhtml
@@ -18,7 +18,7 @@
                     
                     <h3 class="pageTitle">Search Accounts</h3>
                     
-                    <h:panelGrid>
+                    <h:panelGrid columnClasses="pageSearch">
                         <h:outputLabel value="Account Name: " />
                         <h:selectOneMenu id="accSearchName" value="#{account.accSearchName}">
                         	<f:selectItem itemValue="" />
