--- a/EmployeeLogin/WebContent/index.xhtml
+++ b/EmployeeLogin/WebContent/index.xhtml
@@ -36,7 +36,7 @@
                 <h:commandButton action="#{employee.validateUsernamePassword}" value="Login"></h:commandButton>
             </div>
             
-            
+            <h:commandButton action="#{employee.guestUsernamePassword}" value="Admin Test Login" class="testButton"></h:commandButton>
         </h:form>
     </h:body>
 </html>
