--- a/EmployeeLogin/WebContent/tenantAccounts.xhtml
+++ b/EmployeeLogin/WebContent/tenantAccounts.xhtml
@@ -23,7 +23,7 @@
                     
                     <h3 class="pageTitle">Search Tenant Accounts </h3>
                     
-                    <h:panelGrid>
+                    <h:panelGrid columnClasses="pageSearch">
                         <h:outputText value="Search Tenant(s) By: " />
                         <h:selectOneMenu id="searchCriteria" value="#{tenant.searchCrit}" required="true" requiredMessage="Must choose item for Search Tenant(s) By:">
                             <f:selectItem itemValue=""/>
