--- a/EmployeeLogin/WebContent/units.xhtml
+++ b/EmployeeLogin/WebContent/units.xhtml
@@ -18,7 +18,7 @@
                     
                     <h3 class="pageTitle">Search Units</h3>
                     
-                    <h:panelGrid>
+                    <h:panelGrid columnClasses="pageSearch">
                         <h:outputLabel value="Building" />
                         <h:selectOneMenu id="searchUnitBuild" value="#{unit.unitBuildSearch}">
                             <f:selectItem itemValue=""/>
