--- a/EmployeeLogin/WebContent/index.xhtml
+++ b/EmployeeLogin/WebContent/index.xhtml
@@ -9,7 +9,7 @@
     </h:head>
     <h:body id="loginBackground">
         <h:form id="loginForm">
-            <div class="title" id="loginTitle">Waystone Property Management</div>
+            <div class="title" id="loginTitle">WAYSTONE PROPERTY MANAGEMENT</div>
             
             <div class="shadowBox">
                 <h3> Employee Login</h3>
