--- a/EmployeeLogin/WebContent/actionCenter.xhtml
+++ b/EmployeeLogin/WebContent/actionCenter.xhtml
@@ -56,11 +56,11 @@
                             <h:column> 
                         
                                 <f:facet name="header">DEBIT</f:facet>
-                                <h:commandLink value="#{journalObj.recordDebitAmount}" action="#{record.viewIndivRecord(journalObj.recordID)}" class="table-link"/>
+                                <h:commandLink value="#{journalObj.formatDebAmount()}" action="#{record.viewIndivRecord(journalObj.recordID)}" class="table-link"/>
                             </h:column>
                             <h:column> 
                                 <f:facet name="header">CREDIT</f:facet>
-                                <h:commandLink value="#{journalObj.recordCreditAmount}" action="#{record.viewIndivRecord(journalObj.recordID)}" class="table-link"/>
+                                <h:commandLink value="#{journalObj.formatCredAmount()}" action="#{record.viewIndivRecord(journalObj.recordID)}" class="table-link"/>
                             </h:column>
                                                                         
                         </h:dataTable>
