--- a/TenantPortal/WebContent/TenantMaintenanceConfirmation.xhtml
+++ b/TenantPortal/WebContent/TenantMaintenanceConfirmation.xhtml
@@ -1,22 +1,22 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<title>Maintenance Confirmation</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet"
-		href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-	<link rel="stylesheet" href="/resources/demos/style.css" />
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<h:outputScript name="js/waystoneEmp.js" />
+	<script type="text/javascript"
+		src="#{request.contextPath}/resources/js/waystoneTenant.js"></script>
+	<title>Profile</title>
+	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <body>
-	<ui:composition template="templates/commonTemplate.xhtml">
-
+	<ui:composition template="templates/commonTemplate.html">
 		<ui:define name="content">
+			<h:form>
+				<h3>Maintenance Confirmation</h3>
+	Thank you for your submission! Your confirmation# is blah blah blah
+	<h:commandButton value="Submit" action="tenantAdmin" />
+			</h:form>
 		</ui:define>
 	</ui:composition>
 </body>
