--- a/TenantPortal/WebContent/TenantPaymentConfirmation.xhtml
+++ b/TenantPortal/WebContent/TenantPaymentConfirmation.xhtml
@@ -1,11 +1,24 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
-	<title>Payment Confirmation</title>
+	<script type="text/javascript"
+		src="#{request.contextPath}/resources/js/waystoneTenant.js"></script>
+	<title>Profile</title>
+	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <body>
+	<ui:composition template="templates/commonTemplate.html">
+		<ui:define name="content">
+			<h:form>
+				<h3>Payment Confirmation</h3>
+	Thank you for your payment!
+	<h:commandButton value="Submit" action="tenantAdmin" />
+			</h:form>
+		</ui:define>
+	</ui:composition>
 
 </body>
 </html>
