--- a/TenantPortal/WebContent/index.xhtml
+++ b/TenantPortal/WebContent/index.xhtml
@@ -1,27 +1,43 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
+	<h:outputStylesheet name="waystoneTenant.css" library="css" />
 	<title>Tenant Portal Login</title>
 </h:head>
-<h:body>
-	<h:form>
-		<h3>Tenant Login</h3>
+<h:body id="loginBackground">
+	<h:form id="loginForm">
 
-		<h:outputText value="Email" />
-		<h:inputText id="username" value="#{tenant.email}" ></h:inputText>
-		<h:message for="username"></h:message>
-		<br></br><br></br>
+		<div class="title" id="loginTitle">Waystone Property Management</div>
+		<div>
+			<h1 class="pageTitle">Tenant Login</h1>
+			<div class="loginAlign">
+				<span style="width: 60px"> <h:outputText value="Email:	" />
+				</span>
+				<h:inputText id="username" value="#{tenant.email}"></h:inputText>
+				<h:message for="username"></h:message>
+				<br></br> <br></br>
 
-		<h:outputText value="Password" />
-		<h:inputSecret id="password" value="#{tenant.pwd}"></h:inputSecret>
-		<h:message for="password"></h:message>
-		<br></br><br></br>
+			</div>
 
-		<h:commandButton action="#{tenant.validateUsernamePassword}" value="Login" ></h:commandButton>
-                
+			<div class="passwordAlign">
+				<span style="width: 60px"> <h:outputText value="Password:	" />
+				</span>
+				<h:inputSecret id="password" value="#{tenant.pwd}"></h:inputSecret>
+				<h:message for="password"></h:message>
+				<br></br> <br></br>
+			</div>
+
+			<h:panelGrid columns="2">
+				<h:commandButton action="#{tenant.validateUsernamePassword}"
+					value="Login"></h:commandButton>
+				<h:commandButton value="Reset Password" action="TenantResetPassword" />
+			</h:panelGrid>
+		</div>
+
 	</h:form>
 </h:body>
 </html>
